@@ -77,40 +77,6 @@ premain()
     base_dir = strndup(path,
 		       rindex(path, '/') - path);
     printf("base dir %s\n", base_dir);
-
-    sprintf(path, "%s/../Frameworks",
-	    base_dir);
-    gdk_pixbuf_module_file = realpath(path,
-				      NULL);
-    str = malloc(PATH_MAX * sizeof(gchar));
-    sprintf(str,
-	    "GDK_PIXBUF_MODULE_FILE=%s/gdk-pixbuf-2.0/2.10.0/loaders.cache",
-	    gdk_pixbuf_module_file);
-    putenv(str);
-
-    ld_library_path = realpath(path,
-			       NULL);
-    str = malloc(PATH_MAX * sizeof(gchar));
-    sprintf(str,
-	    "DT_RUNPATH=%s/gdk-pixbuf-2.0/2.10.0/loaders",
-	    ld_library_path);
-    putenv(str);
-
-    frameworks_dir = realpath(path,
-			      NULL);
-    str = malloc(PATH_MAX * sizeof(gchar));
-    sprintf(str,
-	    "DYLD_FALLBACK_LIBRARY_PATH=%s",
-	    frameworks_dir);
-    putenv(str);
-
-    str = malloc(PATH_MAX * sizeof(gchar));
-    sprintf(str,
-	    "GDK_PIXBUF_MODULEDIR=%s",
-	    frameworks_dir);
-    putenv(str);
-
-    printf(".. %s", str);
     
     sprintf(path, "%s/../Resources",
 	    base_dir);
